(multi language) update roomdetails, hotelsearchlist, checkout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,7 +59,11 @@
         "bedType": "Bed Type",
         "capacity": "Capacity",
         "availableFacilities": "Available Facilities",
-        "bookNow": "Book Now"
+        "bookNow": "Book Now",
+        "seeRoom": "See Room",
+        "seeOtherPic": "See other pictures",
+        "seeVideo": "See Video",
+        "amenitySpecial": "Outstanding amenities in the room"
     },
     "booking": {
         "booking": "Booking",
@@ -187,6 +191,35 @@
         "mien_phi_wifi": "Free Wifi",
         "wifi": "Wifi"
     },
+    "amenityTypes": {
+        "BASIC": "Basic",
+        "ENTERTAINMENT": "Entertainment",
+        "COMFORT": "Comfort",
+        "KITCHEN": "Kitchen",
+        "SECURITY": "Security",
+        "SPA": "Spa",
+        "POOL": "Swimming Pool",
+        "GYM": "Gym",
+        "BUSINESS": "Business",
+        "PARKING": "Parking",
+        "PET_FRIENDLY": "Pet Friendly",
+        "TRANSPORT": "Transport",
+        "DINING": "Dining",
+        "LAUNDRY": "Laundry",
+        "WIFI": "Wi-Fi"
+    },
+    "bedTypes": {
+        "SINGLE": "Single bed",
+        "DOUBLE": "Double bed",
+        "QUEEN": "Queen size bed",
+        "KING": "King size bed",
+        "TWIN": "Twin bed",
+        "BUNK": "Bunk bed",
+        "SOFA_BED": "Sofa bed",
+        "FUTON": "Futon",
+        "MURPHY": "Murphy bed",
+        "ROLL_AWAY": "Rollaway bed"
+    },
     "footer": {
         "join_newsletter": "Join our newsletter",
         "receive_best_deals": "To receive the best deals every month",
@@ -246,11 +279,162 @@
         "hotelNotFound": "No suitable hotels found",
         "tryOtherCriteria": "Please try with other criteria or check your search information."
     },
+    "roomDetailsPage": {
+        "pet": "Pet",
+        "petnotAllowed": "Pets are not allowed",
+        "childAndBed": "Children and extra beds",
+        "childAndBedDesc": "Children are welcome Kids stay free! Children stay free when using existing bedding; children may not be eligible for complimentary breakfast Rollaway/extra beds are available for $10 per day.",
+        "amenityTitle": "Amenity",
+        "noPlaces": "No locations nearby.",
+        "nearbyPlacesTitle": "Nearby places",
+        "bookInviteDesc": "Book now to enjoy early benefits and amenities to avoid any hassle!",
+        "confirmBookingCheck": "Confirm booking date"
+    },
+    "roomInfo": {
+        "selectRoom": "Select a Room",
+        "bestPrice": "Best Price Guaranteed!",
+        "filters": "Filters",
+        "clearAll": "Clear All",
+        "roomCount": "Rooms Available",
+        "roomDetails": "Room Details",
+        "checkout": "Checkout",
+        "roomSize": "Room size",
+        "priceNotTaxAndFees": "Prices do not include taxes and fees",
+        "roomAvailable": "Rooms available"
+    },
+    "review": {
+        "anonymous": "Anonymous",
+        "cleanliness": "Cleanliness",
+        "comfort": "Comfort",
+        "amenities": "Amenities",
+        "space": "Space",
+        "valueForMoney": "Value for Money",
+        "noReviews": "No reviews for this room yet"
+    },
+    "countdown": {
+        "holdingPrice": "We are holding the price for you"
+    },
+    "checkoutBooking": {
+        "nameLabel": "Full name",
+        "emailLabel": "Email address",
+        "phoneLabel": "Phone number",
+        "noteLabel": "Notes",
+        "voucherLabel": "Voucher code",
+        "nextBtn": "Next",
+        "infoFormLabel": "Information form",
+        "paymentLabel": "Payment",
+        "ePaymentLabel": "Electronic payment",
+        "creditCardLabel": "Credit/Debit card",
+        "payAtLocationLabel": "Pay at location",
+        "nameLabelPh": "Enter your name",
+        "emailLabelPh": "Enter your email address",
+        "phoneLabelPh": "Enter your phone number",
+        "noteLabelPh": "Enter your notes",
+        "voucherLabelPh": "Enter your code",
+        "noticeNotToPrePayment": "Good news! You can book now without providing payment details, and pay at the property during your stay.",
+        "noCreditCardLabel": "No credit card required",
+        "quickToBookRoom": "Hurry! Our last room at this price."
+    },
+    "validation": {
+        "required": "{{field}} is required",
+        "email": "Invalid email address",
+        "password": "Password must contain at least 8 characters, one uppercase, one lowercase, one number, and one special character",
+        "minLength": "{{field}} must have at least {{min}} characters",
+        "maxLength": "{{field}} cannot exceed {{max}} characters",
+
+        "positive": "{{field}} must be a positive number",
+        "typeError": "{{field}} must be a valid number",
+        "boolean": "{{field}} must be a boolean",
+        "match": "Passwords do not match",
+
+        "min": "{{field}} must be greater than or equal to {{min}}",
+        "notSameAsOld": "New password must be different from the old one",
+        "phone": "Phone number must be at least 10 digits",
+
+        "number": "{{field}} must be a number",
+        "title": "Title",
+        "readTime": "Time",
+        "category": "Category",
+        "discountType": "Please select a discount type",
+        "applyTo": "Please select an apply-to field",
+        "description": "Description is required",
+
+        "max": "{{field}} must not exceed {{max}}"
+    },
+    "toast": {
+        "finishInfoBeforePayment": "Please complete the booking information before payment!",
+        "voucherError": "An error occurred while checking the voucher code",
+        "invalidVoucherCode": "The voucher code is invalid or has expired.",
+        "error": "An error occurred.",
+        "voucherRequired": "The voucher is required.",
+        "applyVoucherSuccess": "Voucher code has been applied! Discount"
+    },
+    "rating": {
+        "excellent": "Excellent",
+        "good": "Good",
+        "average": "Average",
+        "poor": "Poor",
+        "noReview": "No review",
+        "veryPoor": "Very poor"
+    },
+    "roomPrice": "Room price",
+    "firstName": "First name",
+    "lastName": "Last name",
+    "oldPassword": "Old password",
+    "newPassword": "New password",
+    "newPasswordConfirm": "Confirm new password",
+    "notes": "Notes",
+    "password": "Password",
+    "amenityType": "Amenity type",
+    "location": "Address",
+    "province": "Province/City",
+    "district": "County",
+    "ward": "Ward",
+    "title": "Title",
+    "readTime": "Reading time",
+    "category": "Category",
+    "fullName": "Full name",
+    "phoneNumber": "Phone number",
+    "paymentMethod": "Payment Method",
+    "ePaymentMethod": "Electronic payment method",
+    "roomType": "Room type",
+    "bedType": "Bed type",
+    "originalPrice": "Original price",
+    "discountedPrice": "Discounted price",
+    "lastPrice": "Last price",
+    "greatPrice": "Great price! (non-refundable)",
+    "priceIncluded": "Price included",
+    "maxOccupancy": "Max occupancy",
+    "roomArea": "Room area",
+    "email": "Email",
+
+    "promotionName": "Promotion name",
+    "promotionCode": "Promotion code",
+    "startDate": "Start date",
+    "endDate": "End date",
+    "quantity": "Quantity",
+    "value": "Discount value",
+    "maxDiscountValue": "Maximum discount value",
+    "discountType": "Discount type",
+    "applyTo": "Apply to",
+    "description": "Description",
+    "paymentPolicy": "Payment policy is required",
+    "applySuccess": "Apply success",
+    "discount": "Discount",
+    "applyBtn": "Apply",
+    "completeBtn": "Complete now",
+    "hotelReviews": "Hotel reviews",
+    "bookWithoutCard": "Book without credit card",
+    "payAtLocation": "Pay at location",
+    "soldOut": "Sold out",
+    "offer": "Offer",
+    "bed": "Bed",
+    "max": "Max",
     "showAll": "Show All",
     "destination": "Destination",
-    "review": "Reviews",
-
+    "reviewTitle": "Reviews",
     "noReviewsYet": "No reviews yet",
+    "notChooses": "Not chooses",
     "tour": "Tour",
     "visa": "Visa",
     "activity": "Activity",
@@ -261,7 +445,10 @@
     "searching": "Searching",
     "availability": "Availability",
     "price": "Price",
-
+    "nights": "Nights",
+    "night": "Night",
+    "checkInDate": "Check in Date",
+    "checkOutDate": "Check out Date",
     "bookNow": "Book Now",
     "cancel": "Cancel",
     "confirmBooking": "Confirm Booking",
@@ -273,12 +460,13 @@
     "updateProfile": "Update Profile",
     "changePassword": "Change Password",
     "currentPassword": "Current Password",
-    "newPassword": "New Password",
+
     "confirmPassword": "Confirm Password",
     "saveChanges": "Save Changes",
     "aboutUs": "About Us",
     "contactUs": "Contact Us",
     "terms": "Terms",
+    "information": "Information",
     "privacyPolicy": "Privacy Policy",
     "help": "Help",
     "faq": "FAQ",
@@ -292,7 +480,7 @@
     "vietnamese": "Vietnamese",
     "manageRooms": "Manage Rooms",
     "addRoom": "Add Room",
-    "roomType": "Room Type",
+
     "pendingBookings": "Pending Bookings",
     "approveBooking": "Approve Booking",
     "cancelBooking": "Cancel Booking",
