--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -148,7 +148,7 @@
         "roomAvailable": "Có sẵn",
         "roomUnavailable": "Không có phòng",
         "freeCancellation": "Hủy miễn phí",
-        "cancellationDeadline": "before {{hours}} giờ",
+        "cancellationDeadline": "trước {{hours}} giờ",
         "nightFor": "1 đêm, {{capacity}} người",
         "priceNotAvailable": "NaN",
         "checkRoom": "Kiểm tra phòng",
@@ -438,6 +438,17 @@
         "SHOPPING": "Mua sắm",
         "SEA": "Biển"
     },
+    "errorToBook": "Bạn vui lòng kiểm tra lại việc thanh toán đơn đặt phòng.",
+
+    "backHomeBtn": "Quay lại trang chủ",
+    "thanksToBook": "Cảm ơn bạn đã đặt phòng với chúng tôi. Chúng tôi rất vui khi được phục vụ bạn.",
+    "paymentProcess": "Đang xử lý thanh toán, vui lòng đợi",
+    "paymentSuccess": "Thanh toán thành công",
+    "paymentFailure": "Thanh toán thất bại",
+    "assistantAI": "Trợ lí AI",
+    "enterMessagePh": "Nhập tin nhắn của bạn",
+    "agreeBook": "Tôi đồng ý đặt phòng",
+    "cancelBook": "Không đặt nữa",
     "nextPost": "Bài đăng tiếp theo",
     "prePost": "Bài đăng trước",
     "views": "Lượt xem",
